# aoc_rust

./: Cargo.toml  Readme.md
benches/: bench.rs
data/y2021/: d24-analysis.py
data/y2025/: d03_full.txt
src/: bivariate_polynomial.rs  diophantine.rs  io.rs  lib.rs  main.rs  octtree.rs  parse.rs  union_find.rs
src/y2019/: d01.rs  d02.rs  d03.rs  d04.rs  mod.rs
src/y2020/: d01.rs  d02.rs  d03.rs  d25.rs  mod.rs
src/y2021/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
src/y2022/: d01.rs  d02.rs  mod.rs
src/y2023/: d01.rs  mod.rs
src/y2025/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  mod.rs
