[package]
name = "advent"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10"
impl_ops = "0.1"
modinverse = "0.1.1"
nalgebra = "0.24"
anyhow = "1.0"
paste = "1.0.6"
nom = "7.1.0"
combine = "4.6.2"
bitvec = "0.22.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
